Overflow bug behoben

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -25,6 +25,7 @@ html
 body
   margin: 0
   position: relative
+  overflow: hidden
 .topbar
   position: relative
   width: 100vw
